# ChatPersona

./: .gitignore  README.md  requirements.txt  server.py
.github/patches/: 0001-feat-redesign-structure-to-match-WhatsApp-Web-interf.patch  0002-style-apply-WhatsApp-Dark-UI-theme-and-remove-neobru.patch  0003-feat-implement-native-whatsapp-message-states-and-en.patch  0004-style-apply-native-whatsapp-chat-doodle-wallpaper-pa.patch  0005-style-apply-native-whatsapp-chat-doodle-wallpaper-pa.patch
.github/workflows/: drip-commits.yml  drip-committer.yml
chatpersona-backend/: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _chat 2.txt  main.py  pyproject.toml  vector.py
chatpersona-backend/.github/workflows/: ci.yml
chatpersona-backend/chatpersona/: __main__.py  cli.py  corpus.py  ollama.py  profiles.py  runtime.py  ui.py
chatpersona-backend/docs/: PROJECT_CONTEXT.md  ROADMAP.md
chatpersona-backend/tests/: test_cli.py  test_main.py  test_ollama.py  test_profiles.py  test_runtime.py  test_vector.py
chatpersona-backend/tests/fixtures/: sample_whatsapp_chat.txt
frontend/: app.js  index.html  style.css
frontend-src/v1-basic/: app.js  index.html  style.css
