[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatpersona"
dynamic = ["version"]
description = "Reusable local CLI for WhatsApp persona chats on Ollama."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["cli", "ollama", "whatsapp", "local", "persona"]
classifiers = [
  "Environment :: Console",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click",
  "langchain-chroma",
  "langchain-core",
  "langchain-ollama",
  "rich",
  "typer",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "ruff>=0.11.0",
]

[project.scripts]
chatpersona = "chatpersona.cli:run"

[tool.setuptools.packages.find]
include = ["chatpersona*"]

[tool.setuptools.dynamic]
version = { attr = "chatpersona.__version__" }

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
